# bi-cytok

./: .gitignore  HelenPractice.ipynb  README.md  _quarto.yml  genFigures.py  general_comments.md  junit.xml  makefile  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: build.yml  coveragerc  test.yml
bicytok/: BindingMod.py  MBmodel.py  annotation_funcs.py  binding_model_funcs.py  compare_datasets.py  distanceMetricFuncs.py  distance_metric_funcs.py  imports.py  lint_qmd.py  process_scRNAseq.qmd  run_scsa_annotation.py  scanning_funcs.py  scrnaseq_annotation_funcs.py  scrnaseq_pipeline.py  selectivityFuncs.py  selectivity_funcs.py
bicytok/data/: epitopeList.csv  epitopeSelectivityList.csv
bicytok/figures/: 2dwasserstein.py  common.py  figure1.py  figure10.py  figure11.py  figure12.py  figure13.py  figure14.py  figure15.py  figure16.py  figure17.py  figure18.py  figure2.py  figure3.py  figure4.py  figure5.py  figure6.py  figure7.py  figure8.py  figure9.py  figureAbundanceAnalysis.py  figureAffinityHeatmap.py  figureBindingModelScaling.py  figureDist1D.py  figureDist1Dvs2D.py  figureDist2D.py  figureDist3D.py  figureDistHists.py  figureDistribution2D.py  figureFlatRegionAnalysis.py  figureKDE_plot.py  figureKL_EMD_plot.py  figureKLvsEMD.py  figureMaxDists.py  figureRboundScaling.py  figureSelec1D.py  figureSelec2D.py  figureSelecDoses.py  figureSelecVSDist.py  figureSelecVSDist2D.py  (+7 more)
bicytok/test/: test_binding_model.py  test_dist_metrics.py  test_model.py  test_property-based.py  test_scanning_functions.py
ckine/: MBmodel.py  figure1.py  figureCommon.py  imports.py  modelTesting.py  selectivityFuncs.py
ckine/data/: epitopeSelectivityList.csv
ckine/figures/: figure1.py  figure2.py  figure3.py  figure4.py  figure5.py  figure6.py  figureCommon.py
data/: CITE-seq_defining_surface_markers.csv  CITE_cell_type_annotations.parquet  README.md  Sender_cell_type_densities.csv
figures/: 1D_scaling_analysis.qmd  2D_scaling_analysis.qmd  Rbound_hist.qmd  binding_model_scaling.qmd  cell_type_proportion_analysis.qmd  comp_selecVSdist-2D.qmd  comp_selecVSdist-3D.qmd  comp_selecVSdist-nD.qmd  dist1D.qmd  dist_1D.qmd  dist_1Dvs2D.qmd  dist_2D.qmd  dist_3D.qmd  dist_3d.qmd  dist_KLvsEMD.qmd  dist_across-cell-types.qmd  dist_examples.qmd  dist_hists.qmd  dist_regularization.qmd  distribution_feature_analysis.qmd  heterogeneity_analysis.qmd  init_val_selection.qmd  leiden_resolution_analysis.qmd  max_dists.qmd  proportion_analysis.qmd  raw_1D-hist.qmd  raw_2D-hist.qmd  raw_hists.qmd  reg_testing.qmd  selec_1D.qmd  selec_2D.qmd  selec_3D.qmd  selec_doses.qmd  selec_nD.qmd  selec_signal_definition.qmd  selec_vs_dist_2d.qmd  selec_vs_dist_3d.qmd  signal_receptor_scan.py  single_receptor_1d.qmd  single_receptor_2d.qmd  (+7 more)
figures/EMD_KL_div_analyses/: comp_selecVSdist-3D.qmd  dist_1D.qmd  dist_1Dvs2D.qmd  dist_2D.qmd  dist_3D.qmd  dist_KLvsEMD.qmd  dist_across-cell-types.qmd  dist_examples.qmd  dist_regularization.qmd
figures/binding_model_analyses/: 2D_scaling_analysis.qmd  binding_model_scaling.qmd  composition_sweep.qmd  composition_sweep_2D.qmd  composition_sweep_3D.qmd  composition_sweep_3rec.qmd  selec_1D.qmd  selec_2D.qmd  selec_3D.qmd  selec_doses.qmd  selec_nD.qmd
figures/bootstrap_analyses/: metric_variation_analysis.qmd  off-target_proportion_analysis.qmd
figures/raw_distribution_figures/: binding_1D-hist.qmd  off_targ_breakdown.qmd  raw_1D-hist.qmd  raw_2D-hist.qmd  raw_hists.qmd
figures/scanning_analyses/: jaccard_comparison.qmd  jaccard_cross_selec.qmd  off_target_comparison.qmd  (+17 more)
manuscript/: 03.results.md  05.methods.md  06.supplement.md
tools/: format_qmd.py
(+7 files in other folders)
