[project]
name = "bi-cytok"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Aaron Meyer", email = "git@ameyer.me" }
]
dependencies = [
    "scipy>=1.14.1",
    "scikit-learn>=1.5.2",
    "anndata>=0.10.9",
    "pot>=0.9.4",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
fbuild = "bicytok.figures.common:genFigure"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "pyright>=1.1.384",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["bicytok"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # Unused arguments
    "ARG",
]
