[project]
name = "bi-cytok"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Aaron Meyer", email = "git@ameyer.me" }
]
dependencies = [
    "scipy>=1.16",
    "scikit-learn>=1.7",
    "anndata>=0.12",
    "matplotlib>=3.10",
    "seaborn>=0.13",
    "jax[cuda12]>=0.8",
    "optimistix>=0.0.10",
    "pot>=0.9.6",
    "jaxtyping>=0.3.2",
    "jaxopt>=0.8.5",
]
readme = "README.md"
requires-python = ">= 3.13"

[project.scripts]
fbuild = "bicytok.figures.common:genFigure"
distanceCSV = "bicytok.distance_metric_funcs:make_2D_distance_metrics"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pyright>=1.1.384",
    "ipykernel>=6.29.5",
    "pyyaml>=6.0.2",
    "nbformat>=5.10.4",
    "nbclient>=0.10.2",
    "hypothesis>=6.137.1",
    "ruff>=0.14.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["bicytok"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # Unused arguments
    "ARG",
    "W",
    # "D", enable this later
    "Q",
    # NumPy-specific checks
    "NPY",
    # type checking
    # "TC", type checking causing issues
]

ignore = [
    "E501", # Ignore line length violations
    "F722", # This is buggy
    "F821", # This is buggy
    "D213", # incompatible with D212
    "D203", # incompatible with D211
]
